--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,32 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "beberlei/assert": "^3.3",
+        "doctrine/doctrine-bundle": "^2.1",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.7",
+        "lambdish/phunctional": "^2.0",
+        "lexik/jwt-authentication-bundle": "^2.11",
+        "nelmio/api-doc-bundle": "^4.2",
+        "nelmio/cors-bundle": "^2.1",
+        "nesbot/carbon": "2.*",
+        "ramsey/uuid": "^4.1",
+        "sensio/framework-extra-bundle": "^6.0",
+        "symfony/asset": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
-        "symfony/yaml": "5.2.*"
+        "symfony/google-mailer": "5.2.*",
+        "symfony/mailer": "5.2.*",
+        "symfony/messenger": "^v5.2",
+        "symfony/twig-bundle": "5.2.*",
+        "symfony/yaml": "5.2.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "3.*"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^5.2"
@@ -31,7 +49,10 @@
     "autoload-dev": {
         "psr-4": {
             "App\\Tests\\": "tests/"
-        }
+        },
+        "classmap": [
+            "src/Infrastructure/Kernel.php"
+        ]
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
