--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,18 +14,22 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
+        resource: '../src/*'
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
             - '../src/Tests/'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/UI/Rest/Controller/'
+    App\UI\Rest\Controller\:
+        resource: '../src/UI/Rest/Controller/*'
         tags: ['controller.service_arguments']
 
+    Bebeco\Infrastructure\Shared\Bus\Command\MessengerCommandBus:
+        arguments:
+            - '@messenger.bus.command'
+    Bebeco\Infrastructure\Shared\Bus\Query\MessengerQueryBus:
+        arguments:
+            - '@messenger.bus.query'
+            -
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
