--- a/etc/dev/docker-compose.yml
+++ b/etc/dev/docker-compose.yml
@@ -1,10 +1,15 @@
-version: '3.7'
-
+version: '3'
 services:
-
   mysql:
+    container_name: mysql-development
+    image: mysql:5.7.12
+    environment:
+      - MYSQL_ROOT_PASSWORD=api
+      - MYSQL_DATABASE=api
     ports:
       - "3306:3306"
+    networks:
+      - development
 
-volumes:
-  db_data:
+networks:
+  development:
