--- a/config/packages/doctrine_migrations.yaml
+++ b/config/packages/doctrine_migrations.yaml
@@ -1,4 +1,4 @@
 doctrine_migrations:
     migrations_paths:
-        App\Doctrine\Migrations: '%kernel.project_dir%/src/Infrastructure/Shared/Persistence/Doctrine/Migrations'
+        App\Infrastructure\Shared\Persistence\Doctrine\Migrations: '%kernel.project_dir%/src/Infrastructure/Shared/Persistence/Doctrine/Migrations'
     enable_profiler: '%kernel.debug%'
