--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "symfony/twig-bundle": "5.2.*",
         "symfony/yaml": "5.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "3.*"
+        "twig/twig": "3.*",
+        "zircote/swagger-php": "^4.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^5.2"
