--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,35 +1,43 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
 
 services:
-    # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: true
+        autoconfigure: true
+        public: false
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+    _instanceof:
+        App\Application\Command\CommandHandlerInterface:
+            public: true
+            tags:
+                - { name: messenger.message_handler, bus: messenger.bus.command }
+
+        App\Application\Query\QueryHandlerInterface:
+            public: true
+            tags:
+                - { name: messenger.message_handler, bus: messenger.bus.query }
+
     App\:
         resource: '../src/*'
         exclude:
             - '../src/Tests/'
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    App\UI\Rest\Controller\:
-        resource: '../src/UI/Rest/Controller/*'
+    App\UI\Console\Command\:
+        resource: '../src/UI/Console/Command/*'
+        tags: [ 'controller.service_arguments' ]
+
+    App\UI\Http\Rest\Controller\:
+        resource: '../src/UI/Http/Rest/Controller/*'
         tags: ['controller.service_arguments']
 
-    Bebeco\Infrastructure\Shared\Bus\Command\MessengerCommandBus:
+    App\UI\Http\Web\Controller\:
+        resource: '../src/UI/Http/Web/Controller/*'
+        tags: ['controller.service_arguments']
+
+    App\Infrastructure\Shared\Bus\Command\MessengerCommandBus:
         arguments:
             - '@messenger.bus.command'
-    Bebeco\Infrastructure\Shared\Bus\Query\MessengerQueryBus:
+    App\Infrastructure\Shared\Bus\Query\MessengerQueryBus:
         arguments:
             - '@messenger.bus.query'
-            -
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+
