--- a/composer.json
+++ b/composer.json
@@ -4,36 +4,36 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4",
+        "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "beberlei/assert": "^3.3",
+        "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "lambdish/phunctional": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.11",
-        "nelmio/api-doc-bundle": "^4.2",
-        "nelmio/cors-bundle": "^2.1",
         "nesbot/carbon": "2.*",
         "ramsey/uuid": "^4.1",
-        "sensio/framework-extra-bundle": "^6.0",
-        "symfony/asset": "5.2.*",
-        "symfony/console": "5.2.*",
-        "symfony/dotenv": "5.2.*",
+        "ramsey/uuid-doctrine": "^1.8",
+        "symfony/apache-pack": "^1.0",
+        "symfony/asset": "6.0.*",
+        "symfony/console": "6.0.*",
+        "symfony/dotenv": "6.0.*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.2.*",
-        "symfony/google-mailer": "5.2.*",
-        "symfony/mailer": "5.2.*",
-        "symfony/messenger": "^v5.2",
-        "symfony/twig-bundle": "5.2.*",
-        "symfony/yaml": "5.2.*",
+        "symfony/framework-bundle": "6.0.*",
+        "symfony/google-mailer": "6.0.*",
+        "symfony/mailer": "6.0.*",
+        "symfony/messenger": "6.0.*",
+        "symfony/twig-bundle": "6.0.*",
+        "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "3.*",
-        "zircote/swagger-php": "^4.0"
+        "zircote/swagger-php": "^4.2"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^5.2"
+        "symfony/phpunit-bridge": "6.0.*"
     },
     "config": {
         "optimize-autoloader": true,
@@ -82,7 +82,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.2.*"
+            "require": "6.0.*"
         }
     }
 }
