--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -4,14 +4,21 @@ doctrine:
         server_version: 5.7
         url: '%env(resolve:DATABASE_URL)%'
         charset: UTF8
+        types:
+            uuid_binary: Ramsey\Uuid\Doctrine\UuidBinaryType
+            datetime_immutable: App\Infrastructure\Shared\Persistence\Doctrine\Types\DateTimeType
+            email: App\Infrastructure\Shared\Persistence\Doctrine\Types\EmailType
+            hashed_password: App\Infrastructure\Shared\Persistence\Doctrine\Types\HashedPasswordType
+        mapping_types:
+            uuid_binary: binary
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
-#        mappings:
-#            App:
-#                is_bundle: false
-#                type: annotation
-#                dir: '%kernel.project_dir%/src/Domain'
-#                prefix: 'App\Domain'
-#                alias: App
+        mappings:
+            User:
+                is_bundle: false
+                type: xml
+                dir: '%kernel.project_dir%/config/packages/doctrine/mapping/User'
+                prefix: 'App\Domain\User'
+                alias: App
