added missing files

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ APP_SECRET=b95986bfed0f04add6721860d9e9b502
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 #DATABASE_URL="mysql://root:api@127.0.0.1:3306/api?serverVersion=5.7"
-DATABASE_URL="mysql://jcastillomas:b95986bf@db4free.net:3306/mytest1860d9e9?serverVersion=8.0"
+DATABASE_URL="mysql://api:api@127.0.0.1:3306/api?serverVersion=8.0"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
