--- a/.env
+++ b/.env
@@ -8,15 +8,17 @@ APP_SECRET=b95986bfed0f04add6721860d9e9b502
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-#DATABASE_URL="mysql://root:api@127.0.0.1:3306/api?serverVersion=5.7"
-DATABASE_URL="mysql://api:api@127.0.0.1:3306/api?serverVersion=8.0"
+# DATABASE_URL="mysql://root:api@127.0.0.1:3306/api?serverVersion=8.0"
+DATABASE_URL="mysql://root:api@mysql:3306/api?serverVersion=8.0"
+# DATABASE_URL="mysql://jcapichallange:XPCxNvNkeWUzXt2m@db4free.net:3306/apichallange?serverVersion=8.0"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=ca8cefba401ee7b98d8a692341a37263
+JWT_SECRET_KEY=%kernel.project_dir%/config/packages/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/packages/jwt/public.pem
+JWT_PASSPHRASE=development
+JWT_TTL=604800
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/mailer ###
