--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
         "zircote/swagger-php": "^4.2"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "6.0.*",
+        "symfony/css-selector": "6.0.*",
         "symfony/phpunit-bridge": "6.0.*"
     },
     "config": {
