--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -50,10 +50,9 @@ security:
                 target: /
 
     access_control:
+        #API SCOPE
+        - { path: ^/api/admin,    roles: ROLE_ADMIN }
+        - { path: ^/api/user,    roles: ROLE_USER }
+        #WEB SCOPE
         - { path: ^/profile,     roles: ROLE_USER }
-#        - { path: ^/status,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/api/auth,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/api/signup,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/api/doc,     roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/,        roles: IS_AUTHENTICATED_FULLY }
-#        - { path: ^/,            roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/user,    roles: ROLE_USER }
